--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     // "declaration": true,                   /* Generates corresponding '.d.ts' file. */
     // "declarationMap": true,                /* Generates a sourcemap for each corresponding '.d.ts' file. */
     "sourceMap": true,                     /* Generates corresponding '.map' file. */
-    "outFile": "./DEMO/js/ftk.js",           /* Concatenate and emit output to single file. */
+    "outFile": "./docs/js/ftk.js",           /* Concatenate and emit output to single file. */
     // "outDir": "./js",                     /* Redirect output structure to the directory. */
     // "rootDir": "./",                       /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
     // "composite": true,                     /* Enable project compilation */
