1、将引擎与APP分离 2、制作d.ts文件

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -14,9 +14,9 @@
         {
             "label": "压缩目标文件",
             "type": "shell",
-            "command": "uglifyjs js/ftk.js -m -c -o js/ftk.min.js",
+            "command": "uglifyjs output/ftk.js -m -c -o output/ftk.min.js",
             "windows": {
-                "command": "uglifyjs js/ftk.js -m -c -o js/ftk.min.js"
+                "command": "uglifyjs output/ftk.js -m -c -o output/ftk.min.js"
             },
             "group": "build",
             "presentation": {
